Report: Modified Evaluation and Conclusions to reflect the new General Solution.

--- a/report.tex
+++ b/report.tex
@@ -770,8 +770,8 @@ void draw() {
 		\label{fig:schedule}
 	\end{figure}
 	
-	The local code editor is the one where must implementation work is since it is the central part of the architecture.
-	When the code editor becomes locally operational we will start to implement the remote code repository and the CAD execution backend.
+	The editing environment and the result visualizer are the components where must implementation work is since they are the central part of the architecture.
+	The implementation of program persistence and result exportation will be in the background.
 	As these implementation tasks are complex, they need to be further decomposed.
 	
 	During implementation we will test both user experience and performance of the system as part of its evaluation.
@@ -809,7 +809,7 @@ void draw() {
 	Special care will have to be taken to make sure that the user experience is good. 
 	A particular element in making it is the overall responsiveness of the user interface and other is the amount of primitives available for \ac{gd}.
 	
-	In the future, a solution for storing the programs users make and for running them in \ac{cad}s may be explored.
+	In the future, a better solution for storing the programs users make and for running them in \ac{cad}s may be explored.
 	
 %----------------------------------------------------
 %NAVappendix
