--- a/report.tex
+++ b/report.tex
@@ -742,7 +742,7 @@ void draw() {
 
 	The user can interact with the 3D view as if it contained a turntable.
 
-	The programming language that is run by the prototype is Javascript with several functions added to produce 3D primitives (such as cubes or cylinders) and to manipulate those primitives (such as moving or grouping).
+	The programming language that is run by the prototype is javascript with several functions added to produce 3D primitives (such as cubes or cylinders) and to manipulate those primitives (such as moving or grouping).
 
 	The prototype is accompanied with example programs which were used to demonstrate it to a small group of potential users.
 
