Architecture: Module renaming.

--- a/report.tex
+++ b/report.tex
@@ -687,7 +687,7 @@ void draw() {
 	Since web browsers allow some local storage to web pages, programs can be persisted there, at least temporarily.
 	On the side of getting results into other software, without communication with the outside we are limited to either using a programming language supported by Rosetta or exporting to a widely supported file format.
 	
-	The architecture of the editing environment and the visualizer together with program persistence and result exportation can be visualized in Figure \ref{fig:gen:sol}.
+	The architecture of the editing environment and the visualizer together with the program persistence module and the export module can be visualized in Figure \ref{fig:gen:sol}.
 	
 	\begin{figure}
 		\centering
