Report: Removed page requirements from section titles.

--- a/report.tex
+++ b/report.tex
@@ -49,7 +49,7 @@ web browser, Generative Design, integrated development environment, javascript
 \end{keywords}
 %----------------------------------------------------
 %NAVintroduction
-\section{Introduction (2/3pgs)}
+\section{Introduction}
 	%Introduce the power of programming.
 	Programming is becoming an essential way of expressing ideas in a way a computer can understand them.
 	Once a computer can understand an idea (or process) it can apply it as many times as we want.
@@ -164,7 +164,7 @@ web browser, Generative Design, integrated development environment, javascript
 
 %----------------------------------------------------
 %NAVobjectives
-\subsection{Objectives (1pg)}
+\subsection{Objectives}
 	The aim of this project is to provide architects and designers interested in creating 3D models with an environment that fosters the Generative Design approach while being accessible wherever there is a web browser and an internet connection.
 
 	%Why does it need to be accessible wherever the architect is?
@@ -194,7 +194,7 @@ web browser, Generative Design, integrated development environment, javascript
 
 %----------------------------------------------------
 %NAVrelatedwork
-\section{Related Work (~17pgs)}
+\section{Related Work}
 
 \subsection{IDE for GD}
 	Developing and maintaining large software systems is a complex task.
@@ -641,7 +641,7 @@ void draw() {
 
 %----------------------------------------------------
 %NAVarchitecture
-\section{Architecture (2/3pgs)}
+\section{Architecture}
 
 \subsection{Decomposing the problem}
 	To better understand how to solve the problem of helping to make programs for GD, we decomposed it into several parts that can be more or less thought about and solved separately.
@@ -719,7 +719,7 @@ void draw() {
 
 %----------------------------------------------------
 %NAVevaluation
-\section{Evaluation (1/2pgs)}
+\section{Evaluation}
 	To evaluate an \ac{ide} for \ac{gd} we will have to look at three different areas:
 	its performance, its user experience or usability and its Generative Design capability.
 	
