Report: Removed references from related work subsection titles.

--- a/report.tex
+++ b/report.tex
@@ -229,8 +229,8 @@ web browser, Generative Design, integrated development environment, javascript
 	All of these provide inspiration for an \ac{ide} for \ac{gd}.
 	
 %Domain-specific IDEs.
-\subsubsection{Impromptu\cite{sorensen2005impromptu}\cite{sorensen2010programming}}
-	Impromptu is a programming environment developed to explore manipulation of musical structure in live performance; an \ac{ide} for musicians and sound artists.
+\subsubsection{Impromptu}
+	Impromptu\cite{sorensen2005impromptu,sorensen2010programming} is a programming environment developed to explore manipulation of musical structure in live performance; an \ac{ide} for musicians and sound artists.
 	
 	%What is live-performance?
 	In the case of Impromptu, live performance takes place as live programming the algorithms that produce the sounds of the music.
@@ -257,8 +257,8 @@ web browser, Generative Design, integrated development environment, javascript
 	%Describe it as being a tool for people interested in making music.  probably have experience with synthesizer software but little programming experience.
 	%Maybe include link to live performance video.
 	
-\subsubsection{IPython\cite{PER-GRA:2007}}
-	IPython is a notepad-like environment (Figure \ref{fig:ipython:notebook}) directed towards providing better, more straightforward scientific computing. \emph{It makes me remember Mathematica's notebooks.} As its name suggests, IPython's main programming language is Python. 
+\subsubsection{IPython}
+	IPython\cite{PER-GRA:2007} is a notepad-like environment (Figure \ref{fig:ipython:notebook}) directed towards providing better, more straightforward scientific computing. \emph{It makes me remember Mathematica's notebooks.} As its name suggests, IPython's main programming language is Python. 
 	While Python is its main programming language, other popular programming languages can be used in IPython, particularly those popular in the scientific community like R, Julia. \footnote{More language kernels can be found in IPython's github page: https://github.com/ipython/ipython/wiki/IPython-kernels-for-other-languages}
 	
 	\begin{figure}
@@ -286,8 +286,8 @@ web browser, Generative Design, integrated development environment, javascript
 	IPython notebooks don't provide domain specific functionality for architecture.
 	
 %Domain-specific IDEs for graphics, games, 3d modeling and Generative Design.
-\subsubsection{Processing\cite{reas2007processing}}
-	Processing is a programming language and a development environment aimed at ``promoting software literacy in the visual arts and visual literacy within technology''.\footnote{Quoting www.processing.org, 9/Nov/2015.}
+\subsubsection{Processing}
+	Processing\cite{reas2007processing} is a programming language and a development environment aimed at ``promoting software literacy in the visual arts and visual literacy within technology''.\footnote{Quoting www.processing.org, 9/Nov/2015.}
 	It has an heavy focus on encouraging interaction between its users and so has attracted a big community.
 	
 	Processing makes it easy to start writing programs that produce visual output. 
@@ -372,10 +372,10 @@ void draw() {
 	%Describe how little feedback the environment provides. E.g. he has to run the sketch to see if it compiles and runs as he expects. This blocks creation by reaction.
 	%Describe how trying to hide Java doesn't make it a better language for learning or producing art. For doing more advanced things, Processing still requires the programmer to know Java; why not learn Java straight away? Processing tries to hide Java's metaphors, its objects; bad idea. (Scala does a better job, I suppose)
 
-\subsubsection{DesignScript\cite{aish2012designscript}}
+\subsubsection{DesignScript}
 	%TODO collections can be used everywhere one thing can be used
 	%TODO handling collections (replication guides, etc)
-	DesignScript is a programming language that was designed to suit the needs of architecture related design and engineering.
+	DesignScript\cite{aish2012designscript} is a programming language that was designed to suit the needs of architecture related design and engineering.
 	
 	%DesignScript programming paradigms
 	DesignScript uses concepts from multiple programming paradigms like object-oriented, functional and associative programming. 
@@ -436,8 +436,8 @@ void draw() {
 	%
 	%One way DesignScript tries to succeed is to integrate various ways of modeling into the design process. These various ways of modeling are direct-manipulation mode present in any 3d modeling application, the associative mode present in many visual programming environments and the 
 
-\subsubsection{Rosetta\cite{de2012modern}}
-	Rosetta is a platform for \ac{gd}.
+\subsubsection{Rosetta}
+	Rosetta\cite{de2012modern} is a platform for \ac{gd}.
 	It grew from the desire to give the freedom to designers using the \ac{gd} to write their programs using the programming language they want and to easily switch where it takes effect.
 	
 	\begin{figure}
@@ -492,7 +492,7 @@ void draw() {
 	
 	%Rosetta has been extensively used for teaching programming to architecture students at \ac{ist}. 
 
-\subsubsection{Learnable Programming\cite{victor2012learnable}}
+\subsubsection{Learnable Programming}
 	Writing a program in a programming language can be difficult even if it was designed to be easy to use. 
 	When a programming language is coupled with an environment specifically designed for it the programming experience improves drastically. 
 	In his essay\cite{victor2012learnable}, Bret Victor described design principles over systems for learning programming.
@@ -599,8 +599,8 @@ void draw() {
 	The \emph{Behaviors} describe how an \emph{Object} reacts when events are raised on it. \emph{Tags} are groups of \emph{Behaviors}. 
 	When an event is raised on an \emph{Object} both its \emph{Behaviors} and those from its \emph{Tags} are notified.
 
-\subsubsection{OpenJSCAD\cite{openjscad2015site}}
-	OpenJSCAD is a javascript application (or rather, an application based on web technologies).
+\subsubsection{OpenJSCAD}
+	OpenJSCAD\cite{openjscad2015site} is a javascript application (or rather, an application based on web technologies).
 	It aims to provide the same functionality as OpenSCAD but using javascript as a base for its language. 
 	Most of OpenSCAD functionality is implemented in OpenJSCAD. 
 	Like OpenSCAD, it focuses on creating 3D models for 3D printing (e.g. they are solid).
