Bibliography: Added url to some references.

--- a/report.bib
+++ b/report.bib
@@ -190,7 +190,7 @@ year = {2012}
 	author = "René K. Muller",
 	title = "OpenJSCAD.org",
 	year = "2015",
-	url = "\url{http://openjscad.org/}",
+	howpublished = "retrieved from \url{http://openjscad.org/}",
 	note = "[Online; accessed 20-November-2015]"
 }
 @misc{eclipse2007eclipse,
@@ -217,6 +217,6 @@ year = {2012}
 	author = "Goo Technologies",
 	title = "GooCreate.com",
 	year = "2015",
-	url = "\url{http://goocreate.com/}",
+	howpublished = "retrieved from \url{http://goocreate.com/}",
 	note = "[Online; accessed 20-November-2015]"
 }
