LightTable: Added reference to LightTable's website.

--- a/report.bib
+++ b/report.bib
@@ -220,3 +220,10 @@ year = {2012}
 	howpublished = "retrieved from \url{http://goocreate.com/}",
 	note = "[Online; accessed 20-November-2015]"
 }
+@misc{lighttable2015site,
+	author = "Chris Granger",
+	title = "Lighttable",
+	year = "2015",
+	howpublished = "retrieved from \url{http://lighttable.com/}",
+	note = "[Online; accessed 25-November-2015]"
+}
