--- a/report.tex
+++ b/report.tex
@@ -536,7 +536,7 @@ void draw() {
 
 %Inspiration from anything about IDEs.
 \subsubsection{LightTable}
-	LightTable is an example of a desktop application that uses Web technologies.
+	LightTable\cite{lighttable2015site} is an example of a desktop application that uses Web technologies.
 	More specifically, it uses node-webkit as its runtime allowing it to use html layout engine for its user interface, to use javascript as its programming language and to use node.js\cite{tilkov2010node} modules.
 	LightTable is written in ClojureScript\cite{10.1109/MIC.2011.148}, a subset of Clojure that compiles to Javascript.
 
